Resolve css problem

--- a/src/main/webapp/main_page.xhtml
+++ b/src/main/webapp/main_page.xhtml
@@ -7,7 +7,7 @@
 <f:view>
     <h:head>
         <title>Main page</title>
-        <h:outputStylesheet id="main-style" library="style" name="welcome.css"/>
+        <h:outputStylesheet id="main-style" library="style" name="main.css"/>
     </h:head>
     <h:body>
         <div class="outer">
