--- a/src/main/webapp/start_page.xhtml
+++ b/src/main/webapp/start_page.xhtml
@@ -2,28 +2,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-<h:head>
-    <title>Start page</title>
-    <h:outputStylesheet id="start-style" library="style" name="start.css"/>
-</h:head>
-<h:body>
-    <div class="hat outer">
-        <p>Krivosheev Andrey Aleksandrovich, P32111, case 114567</p>
-    </div>
-    <div class="outer">
-        <!-- looks like jsf thouths that canvas sucks -->
-        <canvas id="clock" width="500" height="500"></canvas>
-        <!-- it's not a problem, but ... -->
-    </div>
-    <div class="outer">
-        <h:form id="link-form">
-            <p>
-                Go to <h:commandLink id="main-page-link" action="mainPage">the main page</h:commandLink>
-            </p>
-        </h:form>
-    </div>
-    <h:graphicImage id="cookieImage" library="picture" name="cookie.png"/>
-    <h:outputScript id="start-script" library="script" name="start.js"/>
-</h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<f:view>
+    <h:head>
+        <title>Start page</title>
+        <h:outputStylesheet id="start-style" library="style" name="start.css"/>
+    </h:head>
+    <h:body>
+        <div class="hat outer">
+            <p>Krivosheev Andrey Aleksandrovich, P32111, case 114567</p>
+        </div>
+        <div class="outer">
+            <!-- looks like jsf thouths that canvas sucks -->
+            <canvas id="clock" width="500" height="500"></canvas>
+            <!-- it's not a problem, but ... -->
+        </div>
+        <div class="outer">
+            <h:form id="link-form">
+                <p>
+                    Go to <h:commandLink id="main-page-link" action="mainPage">the main page</h:commandLink>
+                </p>
+            </h:form>
+        </div>
+        <h:graphicImage id="cookieImage" library="picture" name="cookie.png"/>
+        <h:outputScript id="start-script" library="script" name="start.js"/>
+    </h:body>
+</f:view>
 </html>
