--- a/src/main/webapp/welcome_page.xhtml
+++ b/src/main/webapp/welcome_page.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
->
+      xmlns:p="http://primefaces.org/ui">
 <f:view>
     <h:head>
         <title>Welcome page</title>
@@ -20,7 +20,7 @@
             <div>
                 <h:graphicImage id="kitty-dance" library="picture" name="welcome.gif" alt="the best dance in the world"/>
             </div>
-<!--            TODO: fix audio -->
+            <p:audio id="dance-music" value="/resources/audio/welcome.mp3" controls=""/>
         </div>
         <div class="outer">
             <h:form id="link-form">
