Use only jsf tags

--- a/src/main/webapp/easter_egg_page.xhtml
+++ b/src/main/webapp/easter_egg_page.xhtml
@@ -18,9 +18,7 @@
             <h2>You found it!</h2>
         </div>
         <div class="outer">
-            <h:form id="link-form">
-                <h:commandLink id="main-page-link" action="mainPage">Celebrate!!!</h:commandLink>
-            </h:form>
+            <h:link outcome="mainPage">Celebrate!!!</h:link>
         </div>
     </h:body>
 </f:view>
