--- a/src/main/webapp/welcome_page.xhtml
+++ b/src/main/webapp/welcome_page.xhtml
@@ -11,24 +11,22 @@
         <h:outputStylesheet id="welcome-style" library="style" name="welcome.css"/>
     </h:head>
     <h:body>
-        <div class="outer">
+        <h:panelGroup layout="block" styleClass="outer">
             <p>Welcome to ...</p>
-            <label class="game-name">How not to get in the area</label>
+            <h:outputLabel styleClass="game-name">How not to get in the area</h:outputLabel>
             <p>game</p>
-        </div>
-        <div class="outer">
-            <div>
+        </h:panelGroup>
+        <h:panelGroup layout="block" styleClass="outer">
+            <h:panelGroup>
                 <h:graphicImage id="kitty-dance" library="picture" name="welcome.gif" alt="the best dance in the world"/>
-            </div>
+            </h:panelGroup>
             <p:audio id="dance-music" value="/resources/audio/welcome.mp3" controls=""/>
-        </div>
-        <div class="outer">
-            <h:form id="link-form">
-                <p>
-                    To start the game click <h:commandLink id="start-page-link" action="startPage">here</h:commandLink>
-                </p>
-            </h:form>
-        </div>
+        </h:panelGroup>
+        <h:panelGroup layout="block" styleClass="outer">
+            <p>
+                To start the game click <h:link outcome="startPage">here</h:link>
+            </p>
+        </h:panelGroup>
         <h:graphicImage id="cookieImage" library="picture" name="cookie.png" alt="cute cookie"/>
         <h:outputScript id="welcome-script" library="script" name="welcome.js"/>
     </h:body>
