--- a/src/main/webapp/main_page.xhtml
+++ b/src/main/webapp/main_page.xhtml
@@ -4,7 +4,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
       xmlns:p="http://primefaces.org/ui">
 <f:view>
     <h:head>
@@ -17,8 +16,8 @@
                 Test your luck
             </p>
         </h:panelGroup>
-        <h:panelGroup layout="block" styleClass="outer">
-            <canvas id="plot" width='500' height='500'></canvas>
+        <h:panelGroup id="canvasBlock" layout="block" styleClass="outer">
+            <canvas id="plotCanvas" width='500' height='500'></canvas>
         </h:panelGroup>
         <h:panelGroup layout="block" styleClass="outer">
             <p>
@@ -61,8 +60,7 @@
                     <!-- верстка комментариями -->
                     <h:commandButton id="submitButton" value="I'm lucky" type="submit"
                                      action="#{formBean.processForm}">
-                        <f:ajax execute="submitForm" render="submitForm"/>
-                        <f:ajax render="historyTable"/>
+                        <f:ajax execute="submitForm" render="submitForm historyTable"/>
                     </h:commandButton>
                     <!-- верстка комментариями -->
 
@@ -73,7 +71,7 @@
             <p>
                 History
             </p>
-            <p:dataTable id="historyTable" styleClass="history-table"
+            <p:dataTable id="historyTable" tableStyleClass="history-table"
                          value="#{formBean.history}" var="resp">
 
                 <p:column styleClass="number-col">
@@ -88,7 +86,7 @@
 
                 <p:column styleClass="exec-time-col">
                     <f:facet name="header">Execution time</f:facet>
-                    <h:outputText value="#{resp.executionTime}"/>
+                    <h:outputText value="#{resp.executionTime} ms"/>
                 </p:column>
 
                 <p:column styleClass="x-col">
@@ -108,14 +106,8 @@
 
                 <p:column styleClass="result-col">
                     <f:facet name="header">Result</f:facet>
-                    <c:choose>
-                        <c:when test="#{resp.result}">
-                            In the area
-                        </c:when>
-                        <c:otherwise>
-                            Not in the area
-                        </c:otherwise>
-                    </c:choose>
+                    <h:outputLabel styleClass="#{resp.result ? 'positive-result' : 'negative-result'}"
+                                   value="#{resp.result ? 'In the area' : 'Not in the area'}"/>
                 </p:column>
 
             </p:dataTable>
@@ -126,7 +118,10 @@
             </p>
         </h:panelGroup>
         <h:graphicImage id="cookieImage" library="picture" name="cookie.png"/>
-        <h:outputScript id="main-script" library="script" name="main.js"/>
+<!--        <h:outputScript id="main-script" library="script" name="main.js"/>-->
+        <h:panelGroup id="scripts">
+            <script type="module" src="resources/script/main.js"></script>
+        </h:panelGroup>
     </h:body>
 </f:view>
 </html>
