--- a/src/main/webapp/easter_egg_page.xhtml
+++ b/src/main/webapp/easter_egg_page.xhtml
@@ -18,7 +18,7 @@
             <h2>You found it!</h2>
         </div>
         <div class="outer">
-            <h:link outcome="mainPage">Celebrate!!!</h:link>
+            <h:link outcome="startPage">Celebrate!!!</h:link>
         </div>
     </h:body>
 </f:view>
