--- a/src/main/static/facelets/main_page.xhtml
+++ b/src/main/static/facelets/main_page.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<f:view locale="#{formBean.locale}">
+<f:view locale="#{configBean.locale}">
     <h:head>
         <title>Main page</title>
         <h:outputStylesheet id="main-style" library="style" name="main.css"/>
