--- a/src/main/static/facelets/welcome_page.xhtml
+++ b/src/main/static/facelets/welcome_page.xhtml
@@ -5,16 +5,16 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-<f:view>
+<f:view locale="#{configBean.locale}">
     <h:head>
-        <title>Welcome page</title>
+        <title><h:outputText value="#{messages['page.welcome.title']}"/></title>
         <h:outputStylesheet id="welcome-style" library="style" name="welcome.css"/>
     </h:head>
     <h:body>
         <h:panelGroup layout="block" styleClass="outer">
-            <p>Welcome to ...</p>
-            <h:outputLabel styleClass="game-name">How not to get in the area</h:outputLabel>
-            <p>game</p>
+            <p><h:outputText value="#{messages['page.welcome.welcome.top']}"/></p>
+            <h:outputLabel styleClass="game-name" value="#{messages['page.welcome.welcome.center']}"/>
+            <p><h:outputText value="#{messages['page.welcome.welcome.bottom']}"/></p>
         </h:panelGroup>
         <h:panelGroup layout="block" styleClass="outer">
             <h:panelGroup>
@@ -24,9 +24,16 @@
         </h:panelGroup>
         <h:panelGroup layout="block" styleClass="outer">
             <p>
-                To start the game click <h:link outcome="startPage">here</h:link>
+                <h:outputText value="#{messages['page.welcome.link.start']} "/>
+                <h:link outcome="startPage"><h:outputText value="#{messages['page.welcome.link.end']}"/></h:link>
             </p>
         </h:panelGroup>
+        <h:form>
+            <h:selectOneMenu value="#{configBean.language}" onchange="submit()" styleClass="language-changer">
+                <f:selectItem itemValue="en" itemLabel="English"/>
+                <f:selectItem itemValue="ru" itemLabel="РО-СИ-Я!"/>
+            </h:selectOneMenu>
+        </h:form>
         <h:graphicImage id="cookieImage" library="picture" name="cookie.png" alt="cute cookie"/>
         <h:outputScript id="welcome-script" library="script" name="welcome.js"/>
     </h:body>
